[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Aseprite/Design/Battle Screen/Action Buttons/Undo Button_01.png" type="Texture" id=1]
[ext_resource path="res://Assets/Aseprite/Design/Battle Screen/Action Buttons/Action Buttons Background.png" type="Texture" id=2]
[ext_resource path="res://Assets/Aseprite/Design/Battle Screen/Action Buttons/Undo Button_03.png" type="Texture" id=3]
[ext_resource path="res://Assets/Aseprite/Design/Battle Screen/Action Buttons/Undo Button_02.png" type="Texture" id=4]
[ext_resource path="res://Assets/Aseprite/Design/Battle Screen/Action Buttons/Roll Button_03.png" type="Texture" id=5]
[ext_resource path="res://Assets/Aseprite/Design/Battle Screen/Action Buttons/Roll Button_01.png" type="Texture" id=6]
[ext_resource path="res://Assets/Aseprite/Design/Battle Screen/Action Buttons/Roll Button_02.png" type="Texture" id=7]
[ext_resource path="res://Assets/Aseprite/Design/Battle Screen/Action Buttons/Fight Button_03.png" type="Texture" id=8]
[ext_resource path="res://Assets/Aseprite/Design/Battle Screen/Action Buttons/Fight Button_01.png" type="Texture" id=9]
[ext_resource path="res://Assets/Aseprite/Design/Battle Screen/Action Buttons/Fight Button_02.png" type="Texture" id=10]
[ext_resource path="res://Project/Game/BattleScreen/HUD/Battle Control Buttons HUD/BattleControlButtons.gd" type="Script" id=11]

[node name="BattleControlButtons" type="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -80.5
margin_right = 80.5
margin_bottom = 34.0
rect_min_size = Vector2( 161, 34 )
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActionButtonsBackground" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="ActionButtonsBackground"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -74.5
margin_top = -12.0
margin_right = 74.5
margin_bottom = 12.0
rect_min_size = Vector2( 149, 24 )
custom_constants/separation = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UndoButton" type="TextureButton" parent="ActionButtonsBackground/HBoxContainer"]
margin_right = 49.0
margin_bottom = 24.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 3 )
texture_disabled = ExtResource( 4 )

[node name="RollButton" type="TextureButton" parent="ActionButtonsBackground/HBoxContainer"]
margin_left = 50.0
margin_right = 99.0
margin_bottom = 24.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 5 )
texture_disabled = ExtResource( 7 )

[node name="FightButton" type="TextureButton" parent="ActionButtonsBackground/HBoxContainer"]
margin_left = 100.0
margin_right = 149.0
margin_bottom = 24.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 8 )
texture_disabled = ExtResource( 10 )

[connection signal="button_down" from="ActionButtonsBackground/HBoxContainer/RollButton" to="." method="_on_RollButton_button_down"]
[connection signal="button_down" from="ActionButtonsBackground/HBoxContainer/FightButton" to="." method="_on_FightButton_button_down"]
